asmjit_sources = [
  'asmjit/asmjit.h',
  'asmjit/asmjit-scope-begin.h',
  'asmjit/asmjit-scope-end.h',
  'asmjit/core.h',
  'asmjit/core/api-build_p.h',
  'asmjit/core/api-config.h',
  'asmjit/core/archtraits.cpp',
  'asmjit/core/archtraits.h',
  'asmjit/core/archcommons.h',
  'asmjit/core/assembler.cpp',
  'asmjit/core/assembler.h',
  'asmjit/core/builder.cpp',
  'asmjit/core/builder.h',
  'asmjit/core/codebuffer.h',
  'asmjit/core/codeholder.cpp',
  'asmjit/core/codeholder.h',
  'asmjit/core/codewriter.cpp',
  'asmjit/core/codewriter_p.h',
  'asmjit/core/compiler.cpp',
  'asmjit/core/compiler.h',
  'asmjit/core/compilerdefs.h',
  'asmjit/core/constpool.cpp',
  'asmjit/core/constpool.h',
  'asmjit/core/cpuinfo.cpp',
  'asmjit/core/cpuinfo.h',
  'asmjit/core/emithelper.cpp',
  'asmjit/core/emithelper_p.h',
  'asmjit/core/emitter.cpp',
  'asmjit/core/emitter.h',
  'asmjit/core/emitterutils.cpp',
  'asmjit/core/emitterutils_p.h',
  'asmjit/core/environment.cpp',
  'asmjit/core/environment.h',
  'asmjit/core/errorhandler.cpp',
  'asmjit/core/errorhandler.h',
  'asmjit/core/formatter.cpp',
  'asmjit/core/formatter.h',
  'asmjit/core/func.cpp',
  'asmjit/core/func.h',
  'asmjit/core/funcargscontext.cpp',
  'asmjit/core/funcargscontext_p.h',
  'asmjit/core/globals.cpp',
  'asmjit/core/globals.h',
  'asmjit/core/inst.cpp',
  'asmjit/core/inst.h',
  'asmjit/core/jitallocator.cpp',
  'asmjit/core/jitallocator.h',
  'asmjit/core/jitruntime.cpp',
  'asmjit/core/jitruntime.h',
  'asmjit/core/logger.cpp',
  'asmjit/core/logger.h',
  'asmjit/core/misc_p.h',
  'asmjit/core/operand.cpp',
  'asmjit/core/operand.h',
  'asmjit/core/osutils.cpp',
  'asmjit/core/osutils.h',
  'asmjit/core/raassignment_p.h',
  'asmjit/core/rabuilders_p.h',
  'asmjit/core/radefs_p.h',
  'asmjit/core/ralocal.cpp',
  'asmjit/core/ralocal_p.h',
  'asmjit/core/rapass.cpp',
  'asmjit/core/rapass_p.h',
  'asmjit/core/rastack.cpp',
  'asmjit/core/rastack_p.h',
  'asmjit/core/string.cpp',
  'asmjit/core/string.h',
  'asmjit/core/support.cpp',
  'asmjit/core/support.h',
  'asmjit/core/target.cpp',
  'asmjit/core/target.h',
  'asmjit/core/type.cpp',
  'asmjit/core/type.h',
  'asmjit/core/virtmem.cpp',
  'asmjit/core/virtmem.h',
  'asmjit/core/zone.cpp',
  'asmjit/core/zone.h',
  'asmjit/core/zonehash.cpp',
  'asmjit/core/zonehash.h',
  'asmjit/core/zonelist.cpp',
  'asmjit/core/zonelist.h',
  'asmjit/core/zonestack.cpp',
  'asmjit/core/zonestack.h',
  'asmjit/core/zonestring.h',
  'asmjit/core/zonetree.cpp',
  'asmjit/core/zonetree.h',
  'asmjit/core/zonevector.cpp',
  'asmjit/core/zonevector.h',
  'asmjit/arm.h',
  'asmjit/arm/armformatter.cpp',
  'asmjit/arm/armformatter_p.h',
  'asmjit/arm/armglobals.h',
  'asmjit/arm/armoperand.h',
  'asmjit/arm/a64archtraits_p.h',
  'asmjit/arm/a64assembler.cpp',
  'asmjit/arm/a64assembler.h',
  'asmjit/arm/a64builder.cpp',
  'asmjit/arm/a64builder.h',
  'asmjit/arm/a64compiler.cpp',
  'asmjit/arm/a64compiler.h',
  'asmjit/arm/a64emithelper.cpp',
  'asmjit/arm/a64emithelper_p.h',
  'asmjit/arm/a64emitter.h',
  'asmjit/arm/a64formatter.cpp',
  'asmjit/arm/a64formatter_p.h',
  'asmjit/arm/a64func.cpp',
  'asmjit/arm/a64func_p.h',
  'asmjit/arm/a64globals.h',
  'asmjit/arm/a64instapi.cpp',
  'asmjit/arm/a64instapi_p.h',
  'asmjit/arm/a64instdb.cpp',
  'asmjit/arm/a64instdb.h',
  'asmjit/arm/a64operand.cpp',
  'asmjit/arm/a64operand.h',
  'asmjit/arm/a64rapass.cpp',
  'asmjit/arm/a64rapass_p.h',
  'asmjit/arm/a64utils.h',
  'asmjit/x86.h',
  'asmjit/x86/x86archtraits_p.h',
  'asmjit/x86/x86assembler.cpp',
  'asmjit/x86/x86assembler.h',
  'asmjit/x86/x86builder.cpp',
  'asmjit/x86/x86builder.h',
  'asmjit/x86/x86compiler.cpp',
  'asmjit/x86/x86compiler.h',
  'asmjit/x86/x86emithelper.cpp',
  'asmjit/x86/x86emithelper_p.h',
  'asmjit/x86/x86emitter.h',
  'asmjit/x86/x86formatter.cpp',
  'asmjit/x86/x86formatter_p.h',
  'asmjit/x86/x86func.cpp',
  'asmjit/x86/x86func_p.h',
  'asmjit/x86/x86globals.h',
  'asmjit/x86/x86instdb.cpp',
  'asmjit/x86/x86instdb.h',
  'asmjit/x86/x86instdb_p.h',
  'asmjit/x86/x86instapi.cpp',
  'asmjit/x86/x86instapi_p.h',
  'asmjit/x86/x86operand.cpp',
  'asmjit/x86/x86operand.h',
  'asmjit/x86/x86rapass.cpp',
  'asmjit/x86/x86rapass_p.h' 
]

asmjit = static_library('asmjit', sources: asmjit_sources)